--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile --immutable
       - name: Build
-        run: yarn build
+        run: yarn build --base=/$(basename ${GITHUB_REPOSITORY})/
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
