--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,16 @@ on:
     branches:
       - main
 
+  workflow_dispatch:
+
 permissions:
   contents: write
   id-token: write
   pages: write
+
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -27,6 +33,8 @@ jobs:
         run: yarn install --frozen-lockfile --immutable
       - name: Build
         run: yarn build --base=/$(basename ${GITHUB_REPOSITORY})/
+      - name: GH Pages use index.html as 404 page
+        run: cp ./dist/index.html ./dist/404.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
