--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "style": "yarn prettier . --write"
   },
   "dependencies": {
+    "@bsv/sdk": "^1.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
@@ -30,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "3.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.3"
+    "vite": "^7.1.4",
+    "vitest": "^3.2.4"
   }
 }
